--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
         body {
             text-align: center;
         }
+        img{width:1000px;height:100%;margin:0 auto; display:block;}
     </style>
 </head>
 <body>
-        <iframe id="pdf-viewer" src="Artboard 1.pdf"></iframe>
+    <img src="cooler1.jpg"></img>
+    <img src="cooler2.jpg"></img>
 </body>
 </html>
